@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-21T00:33:59Z",
-  "count_outdated" : 498,
-  "uniques_outdated" : 325,
+  "timestamp" : "2024-09-29T00:39:42Z",
+  "count_outdated" : 500,
+  "uniques_outdated" : 327,
   "count" : 503,
   "uniques" : 330,
   "clones" : [
-    {
-      "timestamp": "2024-09-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-09-16T00:00:00Z",
       "count": 1,
